# FIREWARDENBOT

./: .gitignore  README.md  SLAM_LIDAR_INTEGRATION.md  frames_2025-11-11_00.10.10.gv  frames_2025-11-11_00.19.27.gv  frames_2025-11-11_00.50.27.gv  launch_monitor.sh  launch_slam_debug.sh  launch_slam_fixed.sh  launch_slam_interactive.sh  launch_slam_lidar.sh  launch_slam_realtime.sh  launch_slam_simple.sh  launch_vision.sh  slam_demo.html  slam_map_tools.sh  slam_visualizer.py  test_slam_minimal.sh  test_vision.py  test_vision_frames.py
AerialBot/: README.md
LiDAR/: README.md
World/: WORLDS_README.md
World/41068_ws/firewardenbot_vision/: CMakeLists.txt  README.md
World/41068_ws/firewardenbot_vision/config/: vision_config.yaml
World/41068_ws/firewardenbot_vision/scripts/: fire_detection_node.py  vision_aggregator.py
World/41068_ws/firewardenbot_vision/src/: fast_fire_detector.cpp  fast_foliage_detector.cpp
World/41068_ws/install/: local_setup.sh  setup.sh
World/41068_ws/install/firewardenbot_vision/share/firewardenbot_vision/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
World/41068_ws/install/firewardenbot_vision/share/firewardenbot_vision/cmake/: firewardenbot_visionConfig.cmake
World/41068_ws/install/firewardenbot_vision/share/firewardenbot_vision/launch/: firewardenbot_with_vision.launch.py  vision_system.launch.py
World/41068_ws/log/: latest_build
World/41068_ws/src/: CMakeLists.txt
World/41068_ws/src/install/: local_setup.sh  setup.sh
World/41068_ws/src/log/: latest_build
World/41068_ws/src/models/autumn_leaves/: model.sdf
World/41068_ws/src/urdf/: camera_sensors.urdf.xacro  husky.urdf.xacro
World/41068_ws/src/worlds/: mixed_terrain.sdf  obstacle_course.sdf  open_meadows.sdf  sparse_forest.sdf
World/WorldWithDrone/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
World/WorldWithDrone/log/: latest_build  latest_list
World/WorldWithDrone/src/: README.md
World/WorldWithDrone/src/config/: gazebo_bridge.yaml  robot_localization.yaml  slam_params.yaml
World/WorldWithDrone/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
World/WorldWithDrone/src/launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  mapping.py  navigation.py  project_progress.py
World/WorldWithDrone/src/log/: latest_build
World/WorldWithDrone/src/urdf/: drone_with_vision.urdf.xacro
World/WorldWithDrone/src/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
World/WorldWithDrone/src/worlds/: dense_forest.sdf  large_demo.sdf
World/log/: latest_build
detection_outputs/: frame_0001_detections.json  frame_0002_detections.json  frame_0003_detections.json  frame_0004_detections.json  frame_0005_detections.json
firewardenbot_vision/: CMakeLists.txt  README.md  pytest.ini  requirements-test.txt
firewardenbot_vision/config/: vision_config.yaml
firewardenbot_vision/launch/: vision_system.launch.py
firewardenbot_vision/scripts/: fire_detection_node.py  image_processing_node.py
firewardenbot_vision/tests/: __init__.py  conftest.py  test_image_processing_node.py  test_object_detection_node.py
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/bringup/share/bringup/cmake/: bringupConfig-version.cmake  bringupConfig.cmake
install/bringup/share/bringup/config/: firewardenbot.rviz  gazebo_bridge.yaml  gazebo_bridge_two_drones.yaml  nav2_params.yaml  robot_localization.yaml  rviz_camera_only.rviz  slam_params.yaml
install/bringup/share/bringup/environment/: ament_prefix_path.dsv  path.dsv
install/bringup/share/bringup/launch/: bridge_drone1.launch.py  bridge_two_drones.launch.py  navigation.launch.py  navigation_full.launch.py  sim_one_drone.launch.py  sim_one_drone_with_coop.launch.py  sim_two_drones.launch.py  (+1 more)
install/coop/share/coop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/coop/share/coop/launch/: coop_demo.launch.py
install/description/share/description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/perception/share/perception/: package.dsv  package.ps1  package.sh  package.xml
install/sim/share/sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
src/bringup/: CMakeLists.txt
src/bringup/config/: firewardenbot.rviz  gazebo_bridge.yaml  gazebo_bridge_two_drones.yaml  rviz_camera_only.rviz  slam_params.yaml  slam_visualization.rviz
src/bringup/launch/: drone_teleop.launch.py  navigation.launch.py  sim_one_drone.launch.py  sim_one_drone_with_coop.launch.py  sim_two_drones.launch.py  sim_two_drones_with_coop.launch.py  slam_mapping.launch.py
src/bringup/scripts/: drone_controller.py  map_listener.py  odom_publisher.py  save_map.py
src/coop/: package.xml  setup.py
src/coop/coop/: _find_frontier_patch.py  coverage_manager.py  coverage_node.py  drone_agent.py  lidar_reactive.py  task_allocator.py
src/coop/launch/: coop_demo.launch.py
src/coop/resource/ros2run/: coop
src/coop/scripts/: coverage_node  lidar_reactive
src/description/: CMakeLists.txt
src/description/urdf/: common_properties.urdf.xacro  parrot.gazebo.xacro  parrot.urdf.xacro
src/perception/: setup.py
src/sim/: CMakeLists.txt
src/sim/models/forest_plane/: model.sdf
src/sim/models/grass_plane/: model.sdf
src/sim/worlds/: box_arena.sdf  flat_world_green.sdf  mixed_terrain_simple.sdf  mixed_terrain_test.sdf  simple_test_world.sdf
src/vision/: package.xml  setup.py
src/vision/launch/: vision_system.launch.py
src/vision/vision/: enhanced_leaf_detector.py  leaf_detector.py  leaf_monitor.py
ui/: README.md  index.html  launch.sh  package.json  ros-data-server.py  ros-integration.js  styles.css  ui-controller.js
(+160 files in other folders)
