<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firewardenbot_vision</name>
  <version>1.0.0</version>
  <description>Computer vision package for Fire Warden Bot - fire detection, object tracking, and environmental monitoring</description>
  <maintainer email="firewardenbot@example.com">Fire Warden Bot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Computer Vision dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv4</depend>
  <depend>vision_msgs</depend>

  <!-- Ignition Gazebo dependencies -->
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
